修复牧场精灵的冲突

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -39,3 +39,4 @@ msg:
   team_replaced: '&a退伍已替换,原队伍已经放入PC'
   team_removed: '&a队伍已经删除!'
   reach_maximum_team: '&a你的队伍数量已达上线'
+  team_in_ranch: '&c队伍中有宝可梦位于牧场,该精灵没有被调出'
