--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,66 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'java'
 }
 
 group = 'me.gsqfi.poketeams.poketeams.Main'
-version = '1.2-SNAPSHOT'
+version = '1.3-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-    mavenLocal()
-    maven { url 'https://raw.github.com/FullIdle/maven-repository/main/' }
-    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
+allprojects {
+    apply plugin:'java'
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        maven { url 'https://raw.github.com/FullIdle/maven-repository/main/' }
+        maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
+    }
+
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        maven { url 'https://raw.github.com/FullIdle/maven-repository/main/' }
+        maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
+    }
+
+    dependencies {
+        compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
+        compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+
+        compileOnly 'me.clip:placeholderapi:2.11.5'
+        compileOnly 'me.fullidle.ficore:FICore:1.2.2'
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+        compileOnly 'org.projectlombok:lombok:1.18.28'
+        annotationProcessor 'org.projectlombok:lombok:1.18.28'
+    }
+
+    test {
+        useJUnitPlatform()
+    }
+
+    tasks.withType(JavaCompile).configureEach {
+        options.encoding = "UTF-8"
+    }
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
-    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
-
-    compileOnly 'me.clip:placeholderapi:2.11.5'
-    compileOnly 'me.fullidle.ficore:FICore:1.2.2'
-
-    compileOnly 'me.forge.forgedev:ForgeDev:1.12.2'
-    compileOnly 'com.pixelmonmod.pixelmon:Pixelmon:1.12.2-8.4.3'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
-    compileOnly 'org.projectlombok:lombok:1.18.28'
-    annotationProcessor 'org.projectlombok:lombok:1.18.28'
-}
-
-test {
-    useJUnitPlatform()
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = "UTF-8"
+    implementation project(path:'common')
+    implementation project(path:'v12')
+    implementation project(path:'v16')
 }
 
 processResources {
     setFilteringCharset("UTF-8")
     expand project.properties
+}
+
+shadowJar{
+    mergeServiceFiles()
+    archiveBaseName.set(this.rootProject.name)
+    archiveVersion.set(this.version as String)
+    manifest{
+        attributes 'Main-Class':this.group
+    }
 }
