--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,14 @@ plugins {
 }
 
 group = 'me.gsqfi.poketeams.poketeams.Main'
-version = '1.4-SNAPSHOT'
+version = '1.5-SNAPSHOT'
 
 allprojects {
     apply plugin:'java'
-    repositories {
-        mavenCentral()
-        mavenLocal()
-        maven { url 'https://raw.github.com/FullIdle/maven-repository/main/' }
-        maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
+
+    java {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
 
     repositories {
@@ -23,9 +22,6 @@ allprojects {
     }
 
     dependencies {
-        compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
-        compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
-
         compileOnly 'me.clip:placeholderapi:2.11.5'
         compileOnly 'me.fullidle.ficore:FICore:1.2.2'
 
@@ -46,9 +42,13 @@ allprojects {
 }
 
 dependencies {
+    compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+
     implementation project(path:'common')
     implementation project(path:'v12')
     implementation project(path:'v16')
+    implementation project(path:'v20')
 }
 
 processResources {
