--- a/common/build.gradle
+++ b/common/build.gradle
@@ -8,3 +8,8 @@ repositories {
     maven { url 'https://raw.github.com/FullIdle/maven-repository/main/' }
     maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
 }
+
+dependencies {
+    compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+}
