--- a/v20/build.gradle
+++ b/v20/build.gradle
@@ -10,11 +10,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
-    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
-
-    compileOnly 'me.forge.forgedev:ForgeDev:1.12.2'
-    compileOnly 'com.pixelmonmod.pixelmon:Pixelmon:1.12.2-8.4.3'
+    compileOnly fileTree('libs')
 
     implementation project(path: ':common')
 }
