--- a/v20/build.gradle
+++ b/v20/build.gradle
@@ -7,10 +7,15 @@ repositories {
     mavenLocal()
     maven { url 'https://raw.github.com/FullIdle/maven-repository/main/' }
     maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
+    maven { url "https://maven.mohistmc.com/" }
 }
 
 dependencies {
-    compileOnly fileTree('libs')
+    compileOnly 'org.spigotmc:spigot:1.20.2-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT'
+
+    compileOnly 'com.mohistmc:mohistdev:1.20.2'
+    compileOnly 'com.pixelmonmod.pixelmon:Pixelmon:1.20.2-9.2.7'
 
     implementation project(path: ':common')
 }
