--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ group = 'me.gsqfi.poketeams.poketeams.Main'
 version = '1.6.1-SNAPSHOT'
 
 allprojects {
-    apply plugin:'java'
+    apply plugin: 'java'
 
     java {
         sourceCompatibility = 1.8
@@ -17,13 +17,16 @@ allprojects {
     repositories {
         mavenCentral()
         mavenLocal()
-        maven { url 'https://raw.github.com/FullIdle/maven-repository/main/' }
+        maven {
+            allowInsecureProtocol = true
+            url 'http://server.pokemtd.top:31647/snapshots'
+        }
         maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
     }
 
     dependencies {
         compileOnly 'me.clip:placeholderapi:2.11.5'
-        compileOnly 'me.fullidle.ficore:FICore:1.2.2'
+        compileOnly 'me.fullidle.ficore:FICore:1.2.6'
 
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
         testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
@@ -45,10 +48,10 @@ dependencies {
     compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
 
-    implementation project(path:'common')
-    implementation project(path:'v12')
-    implementation project(path:'v16')
-    implementation project(path:'v20')
+    implementation project(path: 'common')
+    implementation project(path: 'v12')
+    implementation project(path: 'v16')
+    implementation project(path: 'v20')
 }
 
 processResources {
@@ -56,11 +59,11 @@ processResources {
     expand project.properties
 }
 
-shadowJar{
+shadowJar {
     mergeServiceFiles()
     archiveBaseName.set(this.rootProject.name)
     archiveVersion.set(this.version as String)
-    manifest{
-        attributes 'Main-Class':this.group
+    manifest {
+        attributes 'Main-Class': this.group
     }
 }
