--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,7 +5,10 @@ plugins {
 repositories {
     mavenCentral()
     mavenLocal()
-    maven { url 'https://raw.github.com/FullIdle/maven-repository/main/' }
+    maven {
+        allowInsecureProtocol = true
+        url 'http://server.pokemtd.top:31647/snapshots'
+    }
     maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
 }
 
